Edited README File

--- a/README
+++ b/README
@@ -2,7 +2,7 @@
 
     			BlueSpike
 
-Real-Time Data Acquisition and Neural Spike Processing Software
+Neural Data Acquisition and Online Spike Processing Software
 
 ////////////////////////////////////////////////////////////////
 
